--- a/trunk/src/sharp/ExportHTML.csproj
+++ b/trunk/src/sharp/ExportHTML.csproj
@@ -75,6 +75,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Resources\LocaleHelper.cs" />
+    <Compile Include="SciHTMLExporter.cs" />
     <Compile Include="Settings.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -83,6 +84,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\FlashDevelop\FlashDevelop.csproj">
+      <Project>{EFD07485-9A64-4EEC-94E7-ACBD4DA5CA93}</Project>
+      <Name>FlashDevelop</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\PluginCore\PluginCore.csproj">
       <Project>{61885F70-B4DC-4B44-852D-5D6D03F2A734}</Project>
       <Name>PluginCore</Name>
