--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -1,4 +1,4 @@
-﻿FLEX_HOME=C:\flex_sdk_trunk
+﻿FLEX_HOME=C:/flex_sdk_trunk
 SRC_DIR=${basedir}/src
 LIBS_DIR=${basedir}/lib
 DEPLOY_DIR=${basedir}/bin
