--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -9,7 +9,7 @@
 	
 	<!-- load properties file -->
 	<property file="build.properties" />
-	<property name="FLEX_HOME" value="C:/flex_sdk_trunk" />
+	<property name="FLEX_HOME" value="C:/sdks/trunk" />
 	
 	<!-- points to our flexTasks.jar we copied to the libs folder to distribute with the project -->
 	<taskdef resource="flexTasks.tasks" classpath="${basedir}/tasks/flexTasks.jar"/> 
@@ -17,6 +17,7 @@
 	<!-- delete and recreate the DEPLOY dir -->
 	<target name="init">
 		<delete dir="${DEPLOY_DIR}" />
+		<delete file="${LIBS_DIR}/*.swc" failonerror="false"/>
 		<mkdir dir="${DEPLOY_DIR}" />
 		<mkdir dir="${DEPLOY_DIR}/js" />
 		<copy file="${RSX_DIR}/index.html" todir="${DEPLOY_DIR}"/>
@@ -49,11 +50,29 @@
 	        <load-config filename="${CONFIG_DIR}/build-e4xu.xml"/>
 	        <source-path path-element="${FLEX_HOME}/frameworks"/>
 	        <source-path path-element="${SRC_DIR}"/>
+			<keep-as3-metadata name="Skin"/>
+		</compc>
+	</target>
+	
+	<!-- Build skins.swc -->
+		<target name="skinsSWC" depends="e4xuSWC">
+		<compc output="${LIBS_DIR}/skins${TODAY}.swc" 
+			debug="${DEBUGGING}">
+	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
+	        <load-config filename="${CONFIG_DIR}/build-skins.xml"/>
+	        <source-path path-element="${FLEX_HOME}/frameworks"/>
+	        <source-path path-element="${SRC_DIR}"/>
+	        <external-library-path dir="${LIBS_DIR}">
+				<include name="e4xu${TODAY}.swc"/>
+	        </external-library-path>
+			<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10">
+				<include name="playerglobal.swc"/>
+	        </external-library-path>
 		</compc>
 	</target>
 	
 	<!-- Build test (index.swf) -->
-	<target name="index" depends="e4xuSWC">
+	<target name="index" depends="skinsSWC">
 		<mxmlc file="${SRC_DIR}/view/SecondFrame.mxml" 
 				output="${DEPLOY_DIR}/index${TODAY}.swf"
 				static-link-runtime-shared-libraries="true"
