--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -20,6 +20,7 @@
 		<delete file="${LIBS_DIR}/*.swc" failonerror="false"/>
 		<mkdir dir="${DEPLOY_DIR}" />
 		<mkdir dir="${DEPLOY_DIR}/js" />
+		<mkdir dir="${LIBS_DIR}/skins" />
 		<copy file="${RSX_DIR}/index.html" todir="${DEPLOY_DIR}"/>
 		<copy file="${RSX_DIR}/swfobject.js" todir="${DEPLOY_DIR}/js"/>
 		<copy file="${RSX_DIR}/expressInstall.swf" todir="${DEPLOY_DIR}"/>
@@ -56,7 +57,7 @@
 	
 	<!-- Build skins.swc -->
 		<target name="skinsSWC" depends="e4xuSWC">
-		<compc output="${LIBS_DIR}/skins${TODAY}.swc" 
+		<compc output="${LIBS_DIR}/skins/skins${TODAY}.swc" 
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-skins.xml"/>
