--- a/trunk/build.properties
+++ b/trunk/build.properties
@@ -5,4 +5,5 @@ DEPLOY_DIR=${basedir}/bin
 CONFIG_DIR=${basedir}/run
 RSX_DIR=${basedir}/rsx
 FLEX_FRAMEWORK_DIR=${basedir}/framework
+SVN_DIR=C:/Program Files/TortoiseSVN/bin
 DEBUGGING=true
