--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -8,16 +8,27 @@
 	<!--!!!!!!!!!!!!!!!!!!! IMPORTANT !!!!!!!!!!!!!!!!!!!!!!!!-->
 	
 	<!-- load properties file -->
-	<property file="build.properties" />
-	<property name="FLEX_HOME" value="C:/sdks/trunk" />
+	<property file="${basedir}/build.properties" />
+	<property name="FLEX_HOME" value="C:/flex_sdk_trunk" />
 	
 	<!-- points to our flexTasks.jar we copied to the libs folder to distribute with the project -->
 	<taskdef resource="flexTasks.tasks" classpath="${basedir}/tasks/flexTasks.jar"/> 
 	
+	<!-- Get our revision counter -->
+	<target name="rev">
+	  <exec executable="${SVN_DIR}/subWCRev.exe">
+		<arg value="${basedir}"/>
+		<arg value="${basedir}/revision.build"/>
+		<arg value="${basedir}/revision.properties"/>
+	  </exec>
+	  <property file="${basedir}/revision.properties" />
+	</target>
 	<!-- delete and recreate the DEPLOY dir -->
-	<target name="init">
+	<target name="init" depends="rev">
 		<delete dir="${DEPLOY_DIR}" />
-		<delete file="${LIBS_DIR}/*.swc" failonerror="false"/>
+		<delete>
+			<fileset dir="${LIBS_DIR}" includes="**/*.swc"/>
+		</delete>
 		<mkdir dir="${DEPLOY_DIR}" />
 		<mkdir dir="${DEPLOY_DIR}/js" />
 		<mkdir dir="${LIBS_DIR}/skins" />
@@ -45,7 +56,7 @@
 	
 	<!-- Build e4xu.swc -->
 		<target name="e4xuSWC" depends="frameworkSWC">
-		<compc output="${LIBS_DIR}/e4xu${TODAY}.swc" 
+		<compc output="${LIBS_DIR}/e4xu${TODAY}-${RV}.swc" 
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-e4xu.xml"/>
@@ -57,14 +68,14 @@
 	
 	<!-- Build skins.swc -->
 		<target name="skinsSWC" depends="e4xuSWC">
-		<compc output="${LIBS_DIR}/skins/skins${TODAY}.swc" 
+		<compc output="${LIBS_DIR}/skins/skins${TODAY}-${RV}.swc" 
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-skins.xml"/>
 	        <source-path path-element="${FLEX_HOME}/frameworks"/>
 	        <source-path path-element="${SRC_DIR}"/>
 	        <external-library-path dir="${LIBS_DIR}">
-				<include name="e4xu${TODAY}.swc"/>
+				<include name="e4xu${TODAY}-${RV}.swc"/>
 	        </external-library-path>
 			<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10">
 				<include name="playerglobal.swc"/>
