--- a/src/sharp/ResourcePRJ/ResourcePRJ.csproj
+++ b/src/sharp/ResourcePRJ/ResourcePRJ.csproj
@@ -70,6 +70,7 @@
     <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Associations\AF_FileAssociations.cs" />
     <Compile Include="COMPCOptions.cs" />
     <Compile Include="Embeds\Embeds.cs" />
     <Compile Include="Enums\Utils.cs" />
@@ -77,6 +78,11 @@
     <Compile Include="PluginMain.cs" />
     <Compile Include="PluginUI.cs">
       <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Resources\en_US.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>en_US.resX</DependentUpon>
     </Compile>
     <Compile Include="Resources\LocaleHelper.cs" />
     <Compile Include="RSXMovieOptions.cs" />
@@ -93,6 +99,8 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\en_US.resX">
       <SubType>Designer</SubType>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>en_US.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +120,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="%24{Project}-config.xml" />
+    <None Include="Resources\RSX.ico" />
     <None Include="Project.as3rsx" />
   </ItemGroup>
 </Project>
