--- a/build.properties
+++ b/build.properties
@@ -7,3 +7,4 @@ RSX_DIR=${basedir}/rsx
 FLEX_FRAMEWORK_DIR=${basedir}/framework
 SVN_DIR=C:/Program Files/TortoiseSVN/bin
 DEBUGGING=true
+COMPILE_EXAMPLES=1
