--- a/examples/build.properties
+++ b/examples/build.properties
@@ -1,1 +1,5 @@
-﻿
+﻿FLEX_HOME=C:/flex_sdk_trunk
+EXAMPLES_DEPLOY_DIR=${basedir}/examples/bin
+EXAMPLES_RSX_DIR=${basedir}/examples/rsx
+EXAMPLES_SRC_DIR=${basedir}/examples/src
+EXAMPLES_CONFIG_DIR=${basedir}/examples/run
