--- a/build.xml
+++ b/build.xml
@@ -42,6 +42,9 @@
 		<replace file="${DEPLOY_DIR}/index.html">
 			<replacefilter token="@swf@" value="index${TODAY}"/>
 		</replace>
+		<condition property="EXAMPLES">
+			<matches string="${COMPILE_EXAMPLES}" pattern="1"/>
+		</condition>
 	</target>
 	
 	<!-- Build framework.swc -->
@@ -95,6 +98,11 @@
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-index.xml"/>
 		</mxmlc>
+		<antcall target="buildExamples"/>
+	</target>
+	
+	<target name="buildExamples" if="EXAMPLES">
+		<ant antfile="${basedir}/examples/build.xml"/>
 	</target>
 	
 </project>
