--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -9,7 +9,7 @@
 	
 	<!-- load properties file -->
 	<property file="${basedir}/build.properties" />
-	<property name="FLEX_HOME" value="C:/sdks/trunk" />
+	<property name="FLEX_HOME" value="C:\off-trunk" /><!-- C:/sdks/trunk -->
 	
 	<!-- points to our flexTasks.jar we copied to the libs folder to distribute with the project -->
 	<taskdef resource="flexTasks.tasks" classpath="${basedir}/tasks/flexTasks.jar"/> 
@@ -61,6 +61,7 @@
 	<!-- Build e4xu.swc -->
 	<target name="e4xuSWC" depends="frameworkSWC">
 		<compc output="${LIBS_DIR}/e4xu${TODAY}-${RV}.swc" 
+			keep-generated-actionscript="true"
 			debug="${DEBUGGING}">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-e4xu.xml"/>
@@ -81,7 +82,7 @@
 	        <external-library-path dir="${LIBS_DIR}">
 				<include name="e4xu${TODAY}-${RV}.swc"/>
 	        </external-library-path>
-			<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10">
+			<external-library-path dir="${FLEX_HOME}/frameworks/libs/player/10.0">
 				<include name="playerglobal.swc"/>
 	        </external-library-path>
 		</compc>
@@ -97,6 +98,7 @@
 				use-network="true">
 	        <load-config filename="${FLEX_HOME}/frameworks/flex-config.xml"/>
 	        <load-config filename="${CONFIG_DIR}/build-index.xml"/>
+			<!--arg value="+=load-config=${CONFIG_DIR}/build-index.xml"/-->
 		</mxmlc>
 		<antcall target="buildExamples"/>
 	</target>
