package  { 	import flash.display.*; 	public class Main extends Sprite  { 		public function Main() { 			super(); 			this.width = 150; 			this.height = 100; 		} 		protected var someVar:Array=[]; 		protected var Array1:Array=[]; 		protected var Array2:Array=[]; 		protected var Object0:Object={ 	e: 'someVar', 	q: 1, 	w: 2, 	es: 3 }; 		protected var Array3:Array=[]; 		protected var Array4:Array=[]; 		protected var Array5:Array=[3, 4, 5, 6, 6]; 	} }

--- a/e4xuc/.classpath
+++ b/e4xuc/.classpath
@@ -13,5 +13,6 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/e4xuc/lib/metaas-0.8-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/home/-=Coding=-/-=Java=-/FlexSDK/lib/flex-compiler-oem.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
