--- a/trunk/e4xuc/build.xml
+++ b/trunk/e4xuc/build.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project default="create_run_jar">
+<project default="create_run_jar" name="Create Runnable Jar for Project e4xuc with Jar-in-Jar Loader">
+    <!--this file was created by Eclipse Runnable JAR Export Wizard-->
+    <!--ANT 1.7 is required                                        -->
     <target name="create_run_jar">
-        <jar destfile="lib/nfx.jar">
+        <jar destfile="X:/-=Coding=-/-=Flash=-/e4xu/e4xuc/lib/nfx.jar">
             <manifest>
                 <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
                 <attribute name="Rsrc-Main-Class" value="Main"/>
                 <attribute name="Class-Path" value="."/>
                 <attribute name="Rsrc-Class-Path" value="./ antlr-runtime-3.0.1.jar stringtemplate-3.1-b1.jar metaas-0.8.jar"/>
             </manifest>
-            <!-- <zipfileset src="jar-in-jar-loader.zip"/> -->
-            <fileset dir="bin"/>
+            <zipfileset src="jar-in-jar-loader.zip"/>
+            <fileset dir="X:/-=Coding=-/-=Flash=-/e4xu/e4xuc/bin"/>
+            <!-- <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="antlr-runtime-3.0.1.jar"/>
+            <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="stringtemplate-3.1-b1.jar"/>
+            <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="metaas-0.8.jar"/> -->
         </jar>
     </target>
 </project>
