--- a/trunk/e4xuc/build.xml
+++ b/trunk/e4xuc/build.xml
@@ -3,7 +3,7 @@
     <!--this file was created by Eclipse Runnable JAR Export Wizard-->
     <!--ANT 1.7 is required                                        -->
     <target name="create_run_jar">
-        <jar destfile="X:/-=Coding=-/-=Flash=-/e4xu/e4xuc/lib/nfx.jar">
+        <jar destfile="./lib/nfx.jar">
             <manifest>
                 <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
                 <attribute name="Rsrc-Main-Class" value="Main"/>
@@ -11,7 +11,7 @@
                 <attribute name="Rsrc-Class-Path" value="./ antlr-runtime-3.0.1.jar stringtemplate-3.1-b1.jar metaas-0.8.jar"/>
             </manifest>
             <zipfileset src="jar-in-jar-loader.zip"/>
-            <fileset dir="X:/-=Coding=-/-=Flash=-/e4xu/e4xuc/bin"/>
+            <fileset dir="./bin"/>
             <!-- <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="antlr-runtime-3.0.1.jar"/>
             <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="stringtemplate-3.1-b1.jar"/>
             <zipfileset dir="X:\-=Coding=-\-=Flash=-\e4xu\e4xuc\lib" includes="metaas-0.8.jar"/> -->
