Updated the build to compile against 4.0

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,11 @@
-﻿FLEX_HOME=C:/flex_sdk_trunk
+﻿
+FLEX_HOME=/home/wvxvw/Flex/SDK/4.0
 SRC_DIR=${basedir}/src
 LIBS_DIR=${basedir}/lib
 DEPLOY_DIR=${basedir}/bin
 CONFIG_DIR=${basedir}/run
 RSX_DIR=${basedir}/rsx
 FLEX_FRAMEWORK_DIR=${basedir}/framework
-SVN_DIR=C:/Program Files/TortoiseSVN/bin
+SVN_EXE=svn
 DEBUGGING=true
 COMPILE_EXAMPLES=0
